--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 sudo: false
 language: scala
 script:
-  - sbt test
-  - sbt scripted
-jdk:
-  - openjdk7
+  - sbt "++${TRAVIS_SCALA_VERSION}" "^^${SBT_VERSION}" test scripted
+matrix:
+  include:
+  - env: SBT_VERSION="0.13.15"
+    jdk: openjdk7
+    scala: 2.10.6
+  - env: SBT_VERSION="1.0.0-RC2"
+    jdk: oraclejdk8
+    scala: 2.12.2
