--- a/src/jekyll/_config.yml
+++ b/src/jekyll/_config.yml
@@ -1,4 +1,4 @@
 pygments: true
 name: SBT PGP plugin
 description: An SBT plugin that enables PGP signatures.
-url: http://scala-sbt.org/xsbt-gpg-plugin/
+url: http://scala-sbt.org/sbt-pgp/
