--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 sudo: false
 language: scala
 script:
-  - sbt "++${TRAVIS_SCALA_VERSION}" "^^${SBT_VERSION}" test scripted
+  - sbt "++${TRAVIS_SCALA_VERSION}" test scripted
 matrix:
   include:
-  - env: SBT_VERSION="0.13.16"
-    jdk: openjdk7
+  - jdk: openjdk7
     scala: 2.10.6
-  - env: SBT_VERSION="1.0.0-RC3"
-    jdk: oraclejdk8
+  - jdk: oraclejdk8
     scala: 2.12.3
