Default useGpg to true
Default useGpg to true, but make it overridable from environment variable SBT_PGP_USE_GPG.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 sudo: false
 language: scala
+
+before_script:
+  - gpg --import test-key.gpg
+
 script:
   - sbt "++${TRAVIS_SCALA_VERSION}" test scripted
 matrix:
