--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,6 @@ name: CI
 on:
   pull_request:
   push:
-  schedule:
-  # 2am EST every Saturday
-  - cron: '0 7 * * 6'
 jobs:
   test:
     strategy:
@@ -14,9 +11,19 @@ jobs:
           - os: ubuntu-latest
             java: 11
             distribution: temurin
+            jobtype: 1
+          - os: ubuntu-latest
+            java: 11
+            distribution: temurin
+            jobtype: 2
           - os: ubuntu-latest
             java: 8
             distribution: temurin
+            jobtype: 1
+          - os: windows-latest
+            java: 11
+            distribution: temurin
+            jobtype: 1
     runs-on: ${{ matrix.os }}
     env:
       # define Java options for both official sbt and sbt-extras
@@ -24,24 +31,21 @@ jobs:
       JVM_OPTS:  -Xms2048M -Xmx2048M -Xss6M -XX:ReservedCodeCacheSize=256M -Dfile.encoding=UTF-8
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Setup JDK
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         distribution: "${{ matrix.distribution }}"
         java-version: "${{ matrix.java }}"
-    - name: Coursier cache
-      uses: coursier/cache-action@v5
-    - name: Build and test
-      run: |
-        gpg --import test-key.gpg
-        sbt -v clean scalafmtSbtCheck +scalafmtCheckAll +test +scripted
-    - name: Cleanup
+        cache: sbt
+    - name: Setup key
       shell: bash
-      run: |
-        rm -rf "$HOME/.sbt/scripted/" || true
-        rm -rf "$HOME/.ivy2/local" || true
-        find $HOME/Library/Caches/Coursier/v1        -name "ivydata-*.properties" -delete || true
-        find $HOME/.ivy2/cache                       -name "ivydata-*.properties" -delete || true
-        find $HOME/.cache/coursier/v1                -name "ivydata-*.properties" -delete || true
-        find $HOME/.sbt                              -name "*.lock"               -delete || true
+      run: gpg --import test-key.gpg
+    - name: Build and test
+      if: ${{ matrix.jobtype == 1 }}
+      shell: bash
+      run: sbt -v clean +test +scripted
+    - name: Scalafmt
+      if: ${{ matrix.jobtype == 2 }}
+      shell: bash
+      run: sbt -v clean scalafmtSbtCheck +scalafmtCheckAll
