--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,14 +12,13 @@ jobs:
       JVM_OPTS:  -Xms2048M -Xmx2048M -Xss6M -XX:ReservedCodeCacheSize=256M -Dfile.encoding=UTF-8
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Setup JDK
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
-        distribution: "temurin"
-        java-version: "8"
-    - name: Coursier cache
-      uses: coursier/cache-action@v5
+        distribution: temurin
+        java-version: 8
+        cache: sbt
     - name: Test
       run: |
         gpg --import test-key.gpg
@@ -34,12 +33,3 @@ jobs:
         CI_RELEASE: +publishSigned
       run: |
         sbt ci-release
-    - name: Cleanup
-      shell: bash
-      run: |
-        rm -rf "$HOME/.sbt/scripted/" || true
-        rm -rf "$HOME/.ivy2/local" || true
-        find $HOME/Library/Caches/Coursier/v1        -name "ivydata-*.properties" -delete || true
-        find $HOME/.ivy2/cache                       -name "ivydata-*.properties" -delete || true
-        find $HOME/.cache/coursier/v1                -name "ivydata-*.properties" -delete || true
-        find $HOME/.sbt                              -name "*.lock"               -delete || true
